# meeting_notes_summerizer

./: .gitignore  PROJECT_DOCUMENTATION_REPORT.docx  PROJECT_DOCUMENTATION_REPORT.md  README.md  debug_llm.py  main.py  pyproject.toml  requirements.txt  streamlit_app.py  test_transcript.txt
app/agents/: memory_agent.py  orchestrator_agent.py  summarizer_agent.py
app/api/: __init__.py  server.py
app/llm/: ollama_client.py  prompts.py
app/memory/: sqlite_store.py  vector_store.py
app/schemas/: action_item.py  meeting.py  summary.py
app/services/: dataset_loader.py  evaluation.py  transcript_file_loader.py
app/tools/: chunk_text.py  clean_text.py  compact_transcript.py  extract_actions.py  ingest_transcript.py  retrieve_context.py  save_meeting.py  search_meetings.py  summarize_meeting.py
data/: meeting_notes.db
data/chroma_db/: chroma.sqlite3
data/sample_transcripts/: engineering_sync.txt  hr_committee.txt  marketing_review.txt  product_planning.txt
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx  styles.css
scripts/: markdown_to_docx.py
tests/: test_dataset_loader.py  test_orchestrator_agent.py  test_schemas.py  test_sqlite_store.py  test_tools.py  test_transcript_file_loader.py
