[project]
name = "ai-mini-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.4.22",
    "fastparquet>=2023.10.0",
    "ollama>=0.1.6",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "pydantic>=2.5.0",
    "pytest>=7.4.0",
    "python-dotenv>=1.0.0",
    "sentence-transformers>=2.3.1",
    "sqlalchemy>=2.0.25",
    "streamlit>=1.30.0",
    "torchvision>=0.26.0",
]
